[gd_scene load_steps=12 format=2]

[ext_resource path="res://IndustriesOfEnceladusRevamp/ships/modules/CargoAuxBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ships/tntrl_engine_off.wav" type="AudioStream" id=2]
[ext_resource path="res://ships/tnrtl-engine_01.wav" type="AudioStream" id=3]
[ext_resource path="res://ships/tntrl_engine_on.wav" type="AudioStream" id=4]
[ext_resource path="res://asteroids/dust-c.png" type="Texture" id=5]
[ext_resource path="res://asteroids/dust-n.png" type="Texture" id=6]
[ext_resource path="res://sfx/PitchAdjustedAudio.gd" type="Script" id=7]
[ext_resource path="res://IndustriesOfEnceladusRevamp/ships/modules/CargoAuxPreProc.gd" type="Script" id=9]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 128.0
initial_velocity_random = 0.5
angular_velocity = 90.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 1.0
color_ramp = SubResource( 2 )

[node name="CargoAuxPreProc" instance=ExtResource( 1 )]
position = Vector2( -32, 0 )
script = ExtResource( 9 )
ventTime = 0.5
massDamageScale = 20.0
kgps = 100
powerDrawPerKg = 100
mineralEfficiency = 0.0
remassEfficiency = 0.5
enabled = true

[node name="ProcessingArea" type="Area2D" parent="." index="0"]
position = Vector2( 32, 0 )
z_index = 50
collision_layer = 524288
monitorable = false
space_override = 3
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="ZoneTop" type="CollisionPolygon2D" parent="ProcessingArea" index="0"]
polygon = PoolVector2Array( 8, 0, 0, -8, -8, 0 )

[node name="ZoneBottom" type="CollisionPolygon2D" parent="ProcessingArea" index="1"]
polygon = PoolVector2Array( 8, 0, 0, 8, -8, 0 )

[node name="VentRemass" type="Particles2D" parent="." index="1"]
show_behind_parent = true
z_index = -50
emitting = false
amount = 32
lifetime = 0.75
speed_scale = 0.5
randomness = 0.5
visibility_rect = Rect2( -500, -500, 1000, 1000 )
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 5 )
normal_map = ExtResource( 6 )

[node name="Processing" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 3 )
volume_db = -25.0
pitch_scale = 5.0
bus = "ShipBowels"
script = ExtResource( 7 )

[node name="ProStart" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 4 )
volume_db = -25.0
pitch_scale = 5.0
bus = "SFX"
script = ExtResource( 7 )

[node name="ProStop" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 2 )
volume_db = -25.0
pitch_scale = 5.0
bus = "SFX"
script = ExtResource( 7 )

[connection signal="body_entered" from="ProcessingArea" to="." method="_on_ProcessingArea_body_entered"]
[connection signal="body_exited" from="ProcessingArea" to="." method="_on_ProcessingArea_body_exited"]
